--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-14 14:36:36 -0600 
+%% Created for Evan Bollig at 2013-11-15 11:42:15 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{IntelTBB,
+	Author = {Intel Corporation},
+	Date-Added = {2013-11-15 17:41:29 +0000},
+	Date-Modified = {2013-11-15 17:42:11 +0000},
+	Howpublished = {\nolinkurl{https://www.threadingbuildingblocks.org/}},
+	Month = {November},
+	Title = {Intel Threaded Building Blocks (Intel TBB)},
+	Year = {2013}}
+
+@misc{NVidiaExamples,
+	Author = {NVidia},
+	Date-Added = {2013-11-15 17:04:50 +0000},
+	Date-Modified = {2013-11-15 17:06:46 +0000},
+	Howpublished = {\nolinkurl{http://www.nvidia.com/object/cuda_showcase_html.html}},
+	Month = {November},
+	Title = {CUDA Community Showcase - HTML Version},
+	Year = {2013}}
 
 @techreport{Vladimirov2012,
 	Author = {Andrey Vladimirov},
@@ -25,7 +43,8 @@
 	Month = {May},
 	Title = {Chips on the Table: Sandy Bridge versus Westmere},
 	Url = {\nolinkurl{http://archive.hpcwire.com/hpcwire/2012-05-08/chips_on_the_table:_sandy_bridge_versus_westmere.html}},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {%5Cnolinkurl%7Bhttp://archive.hpcwire.com/hpcwire/2012-05-08/chips_on_the_table:_sandy_bridge_versus_westmere.html%7D}}
 
 @article{Patankar1972,
 	Author = {S.V Patankar and D.B Spalding},
